# CW_500

./: .gitignore  pyproject.toml
cw_sp500/: cw_sp500.py
