[tool.poetry]
name = "cw_sp500"
version = "0.1.0"
description = ""
authors = ["Khalyavin Vasily <STS2004@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_sp500"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.script]
get-sorted = 'cw_sp500.cw_sp500:select_sorted(sort_colunms=["open"], order="asc", limit=10, filename="dump.csv")'
get-banch = 'cw_sp500.cw_sp500:get_by_date(date="all", name="all", filename=dump.csv)'
get-test = 'cw_sp500.cw_sp500:test'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
